--- a/fluxtowers.html
+++ b/fluxtowers.html
@@ -12,7 +12,7 @@
         crossorigin=""></script>
 
     <script
-        src="/Users/devonmaloney/Documents/GitHub/Leaflet_CherryTrees/flowering_cherries_4326.geojson"> </script>
+        src="/https://github.com/devonvmaloney/fluxtower/blob/master/flux_sites.geojson"> </script>
 
 </head>
 
