--- a/fluxtowers2.html
+++ b/fluxtowers2.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title> Map of Global Flux Tower Network  </title>
+    <title> Map of UNC Cherry Trees </title>
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
         integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
@@ -11,10 +11,6 @@
         integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
         crossorigin=""></script>
 
-    <script type="text/javascript" src="leaflet.js"></script>
-	<link rel="stylesheet" type="text/css" href="leaflet-openweathermap.css" />
-	<script type="text/javascript" src="leaflet-openweathermap.js"></script>
-
     <script
         src="/https://github.com/devonvmaloney/fluxtower/blob/master/flux_sites.geojson"> </script>
 
@@ -23,7 +19,7 @@
 <body>
     <b>Flux towers </b>
     <br />
-    Markers repersent the location of the flux tower sites. 
+    Markers repersent the location of flux towers. 
 
     <div id="mapid"></div>
 
@@ -35,28 +31,25 @@
     </style>
     <script>
 
-        var map = L.map('mapid').setView([35.905, -79.05], 3);
-
-        //L.tileLayer('http://maps.openweathermap.org/maps/2.0/weather/TA2/{z}/{x}/{y}?date=1527811200&opacity=0.9&fill_bound=true&appid=b3cb58b02b9e19a95041c7b4f741e885', {
-            //attribution: '&copy; <a href="https://openweathermap.org/">OpenWeatherMap</a> contributors'
-        //}).addTo(map);
+        var map = L.map('mapid').setView([35.905, -79.05], 15);
 
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-        ).addTo(map);
+        }).addTo(map);
 
-        //var clouds = L.OWM.clouds({showLegend: false, opacity: 0.5, appId: 'YOUR_OWN_APPID'});
-        //var city = L.OWM.current({intervall: 15, lang: 'de'});
-
-        //var map = L.map('mapid', { center: new L.LatLng(51.5, 10), zoom: 10, layers: [osm] });
-        //var baseMaps = { "OSM Standard": osm };
-        //var overlayMaps = { "Clouds": clouds, "Cities": city };
-        //var layerControl = L.control.layers(baseMaps, overlayMaps).addTo(map);
-    
 
     </script>
 
     <script>
+
+        var redIcon = new L.Icon({
+            iconUrl: 'https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-1x-red.png',
+            shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
+            iconSize: [25, 41],
+            iconAnchor: [12, 41],
+            popupAnchor: [1, -34],
+            shadowSize: [41, 41]
+        })
 
         var cherryIcon = L.icon({
             iconUrl: 'https://github.com/devonvmaloney/Leaflet_CherryTrees/blob/master/hiclipart.com.png',
