--- a/fluxtowers2.html
+++ b/fluxtowers2.html
@@ -42,17 +42,8 @@
 
     <script>
 
-        var redIcon = new L.Icon({
-            iconUrl: 'https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-1x-red.png',
-            shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
-            iconSize: [25, 41],
-            iconAnchor: [12, 41],
-            popupAnchor: [1, -34],
-            shadowSize: [41, 41]
-        })
-
-        var cherryIcon = L.icon({
-            iconUrl: 'https://github.com/devonvmaloney/Leaflet_CherryTrees/blob/master/hiclipart.com.png',
+        var towerIcon = L.icon({
+            iconUrl: 'https://github.com/devonvmaloney/fluxtower/blob/master/pngfuel.com.png',
             iconSize: [50, 50],
             popupAnchor: [0, 0]
         })
@@ -62,7 +53,7 @@
                 pointToLayer:
                     function (feature, latlng) {
                         return L.marker(latlng,
-                            { icon: cherryIcon })
+                            { icon: towerIcon })
                             ;
                     }
             }).addTo(map)
