--- a/fluxtowers2.html
+++ b/fluxtowers2.html
@@ -3,24 +3,17 @@
  <title>Flux towers</title>
 
  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
- integrity="sha512-
-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrD
-h+drA=="
- crossorigin=""/>
- <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"
- integrity="sha512-
-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw
-5lwrg=="
- crossorigin=""></script>
+ integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==" crossorigin=""/>
+ 
+ <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js" integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="crossorigin=""></script>
  </head>
+ 
  <body>
       <h1>Flux Towers</h1>
       <h2>Global network of flux towers</h2>
-      <h4>Devon Maloney </h4>
+      <body>Devon Maloney </body>
       <div class="container">
              <div id="mapid"></div>
-
-       </div>
     
     <style>
 
